--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,6 +10,7 @@
         .card { margin-top: 20px; }
         .form-section { max-width: 600px; margin: 0 auto; }
     </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -29,19 +30,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <script>
-    async function stopServer() {
-        try {
-            const response = await fetch('/stop_server', { method: 'POST' });
-            const data = await response.json();
-            alert(data.message);
-        } catch (error) {
-            alert("Failed to stop server");
-        }
-    }
-    </script>
-    
     {% block scripts %}{% endblock %}
 </body>
 </html>
